--- a/basic.css
+++ b/basic.css
@@ -14,6 +14,14 @@ html {
   background-color: black;
 }
 
+section {
+  color: white;
+}
+
+a {
+  color: white;
+}
+
 #image {
     display: flex;
     justify-content: center;
@@ -28,6 +36,11 @@ html {
   min-width: 100%;
   min-height: 100%;
   height: 175px;
+  border-radius: 151px;
+}
+
+#projectImage {
+  border-radius: 151px;
 }
 
 nav {
@@ -94,5 +107,3 @@ article {
   padding-left: 11%;
   padding-right: 11%;
 }
-
-nav .icon-menu
