--- a/basic.css
+++ b/basic.css
@@ -26,13 +26,19 @@ h1 {
   font-size: 50px;
 }
 
-/* #image img {
-  flex-shrink: 0;
-  min-width: 100%;
-  min-height: 100%;
-  height: 175px;
-  border-radius: 151px;
-} */
+#main-menu {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+#menu-toggle:checked + #main-menu {
+  max-height: 110px;
+}
 
 nav {
   text-align: center;
@@ -46,18 +52,32 @@ nav {
   font-size:  2vw;
 }
 
-.main-nav ul {
+/* .main-nav ul {
   text-align: center;
-  list-style-type: none;
   width: 100%;
   display: none;
   padding: 0px;
   flex-direction: column;
   color: white;
-}
+} */
 
 .main-nav .icon-menu:hover + ul {
   display: flex;
+}
+
+.main-nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  color: white;
+}
+
+.main-nav span {
+  display: none;
+}
+
+.main-nav a {
+  color: white;
 }
 
 li {
@@ -79,7 +99,7 @@ li {
   display: none;
 }
 
-#testProjects {
+.testProjects {
   background-color: #ffffff66;
   border-radius: 10px;
   color: white;
@@ -94,7 +114,7 @@ h2, h5{
   text-align: center;
 }
 
-#testProjects img {
+.testProjects img {
   max-width: 90%;
 
 }
@@ -162,7 +182,11 @@ h2, h5{
   margin: auto;
 }
 
-#testProjects {
+h1 {
+  font-size: 150px;
+}
+
+.testProjects {
   background-color: #ffffff66;
   border-radius: 10px;
   color: white;
@@ -170,7 +194,3 @@ h2, h5{
   margin-left: auto;
   margin-right: auto;
 }
-
-  /* .my-project img {
-    max-width: 90%;
-  } */
