--- a/basic.css
+++ b/basic.css
@@ -92,6 +92,24 @@ li {
   text-align: center;
   margin-top: 6%;
   color: white;
+  height: 300px;
+}
+
+.mySlides {
+  display:none;
+  width:50%;
+  margin:auto;
+}
+.left, .right, .badge {
+  cursor:pointer;
+}
+.badge {
+  height:13px;
+  width:13px;
+  padding:0;
+}
+.center {
+  width: 100%;
 }
 
 /*projects css*/
