--- a/icons.css
+++ b/icons.css
@@ -1,15 +1,12 @@
 @font-face {
 	font-family: 'icomoon';
 	src:url('fonts/icomoon.eot?wfb79s');
-	src:url('fonts/icomoon.eot?wfb79s#iefix') format('embedded-opentype'),
-		url('fonts/icomoon.ttf?wfb79s') format('truetype'),
-		url('fonts/icomoon.woff?wfb79s') format('woff'),
-		url('fonts/icomoon.svg?wfb79s#icomoon') format('svg');
+	src:url('fonts/IcoMoon-Free.ttf') format('truetype'),
 	font-weight: normal;
 	font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+.icon {
 	font-family: 'icomoon';
 	/* speak: none; */
 	font-style: normal;
@@ -17,7 +14,7 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-
+	font-feature-settings: "liga" 1;
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
